@@ -5,6 +5,7 @@ Upcoming version
 [TASK]    Make extension compatible with TYPO3 11
 [BUGFIX]  Fix PHP 8 issues
 [TASK]    Move icon for example custom indexer
+[TASK]    Encapsulate code in ext_localconf.php in Closure
 
 Version 4.0.0, October 2021
 [!!!]     This is the version for ke_search version 4. (The namespace of ke_search has changed in version 4.)
